step4/README

if you want to make in yokota01 server

Default Compiler Options BLISLAB_USE_INTEL=false

then you get bellow message

```
step4$ make
* Using CFLAGS=-O3 -fopenmp -mavx -fPIC -DUSE_BLAS
* Using LDFLAGS=-I./include -I./kernels -I{BLAS_DIR}/include
gcc -O3 -fopenmp -mavx -fPIC -DUSE_BLAS -c kernels/bl_dgemm_asm_8x4.c -o kernels/bl_dgemm_asm_8x4.o -I./include -I./kernels -I{BLAS_DIR}/include
kernels/bl_dgemm_asm_8x4.c: In function ‘bl_dgemm_asm_8x4’:
kernels/bl_dgemm_asm_8x4.c:16:2: error: ‘asm’ operand has impossible constraints
  __asm__ volatile
  ^
make: *** [kernels/bl_dgemm_asm_8x4.o] Error 1
```

so you should turn on Compiler Options
BLISLAB_USE_INTEL=true

=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
                ____  _     ___ ____  _       _     
               | __ )| |   |_ _/ ___|| | __ _| |__  
               |  _ \| |    | |\___ \| |/ _` | '_ \ 
               | |_) | |___ | | ___) | | (_| | |_) |
               |____/|_____|___|____/|_|\__,_|_.__/ 

=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=

BLISlab: A Sandbox for Optimizing GEMM

.
├── README
├── sourceme.sh
├── makefile
├── dgemm
│   ├── bl_dgemm_ref.c
│   ├── bl_dgemm_util.c
│   └── my_dgemm.c
├── include
│   ├── bl_config.h
│   ├── bl_dgemm.h
│   └── bl_dgemm_kernel.h
├── kernels
│   ├── bl_dgemm_asm_12x4.c
│   ├── bl_dgemm_asm_8x4.c
│   ├── bl_dgemm_asm_8x6.c
│   ├── bl_dgemm_int_8x4.c
│   └── bl_dgemm_ukr.c
├── lib
├── make.inc.files
│   ├── make.gnu.inc
│   ├── make.inc
│   └── make.intel.inc
└── test
    ├── makefile
    ├── run_bl_dgemm.sh
    ├── tacc_run_bl_dgemm.sh
    └── test_bl_dgemm.c

How to compile and execute the code:
1. Change the options in sourceme.sh and set the environment variables.
$ source sourceme.sh
2. Compile the code, generate the library and test executables.
$ make
3. Execute the test driver.
$ cd test
$ ./run_bl_dgemm.sh

